--- a/src/assets/layout/styles/layout/theme/_primary.scss
+++ b/src/assets/layout/styles/layout/theme/_primary.scss
@@ -1,6 +1,6 @@
 .layout-primary {
     --v-body-bg: linear-gradient(147.38deg, var(--primary-500) 0%, var(--primary-800) 100%);
-    --v-menuitem-text-color-secondary: rgba(255, 255, 255, .7);
+    --v-menuitem-text-color-secondary: var(--primary-color-text);
     --v-menuitem-text-color: var(--primary-color-text);
     --v-menuitem-hover-bg: rgba(255, 255, 255, .1);
     --v-overlay-menuitem-text-color: var(--text-color);
